fixing radio btn alignment

--- a/src/comp/forms/ApplyNow.module.css
+++ b/src/comp/forms/ApplyNow.module.css
@@ -122,4 +122,8 @@ button {
         flex-direction: column;
         gap: 24px;
     }
+    .radioBtn{
+        display: flex;
+        flex-direction: column;
+    }
 }
